@@ -58,6 +58,7 @@ Bugs fixed:
 - 3504607 CMPIRole Support in brokerUpc
 - 3506306 Fix count for InvokeMethod requests
 - 3498496 sfcb hangs and fails to respond to CIM requests
+- 3512425 SequenceContext needs to be set at startup
 
 Changes in 1.3.13
 =================
