@@ -1,3 +1,8 @@
+2012-03-28 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
+
+	* interopProvider.c:
+	[ 3512425 ] SequenceContext needs to be set at startup
+
 2012-03-26  Narasimha Sharoff  <nsharoff@us.ibm.com>
 
 	* providerDrv.c:
